--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <label>Name:</label>
       <input type="text" ng-model="yourName" placeholder="Enter a name here">
       <hr>
-      <h1>Hello {{yourName}}!</h1>
+      <h1>Hello {{Integrated}}!</h1>
     </div>
   </body>
 </html>
