--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <div>
       <label>Name:</label>
-      <input type="text" ng-model="yourName" placeholder="Enter a name here">
+      <input type="text" ng-model="Integrated" placeholder="Enter a name here">
       <hr>
       <h1>Hello {{Integrated}}!</h1>
     </div>
